--- a/cli/src/main/resources/application.conf
+++ b/cli/src/main/resources/application.conf
@@ -1,6 +1,7 @@
 akka {
   library-extensions = [] // disable Serialization ext
   loglevel = "OFF"
+  stdout-loglevel = "OFF"
 
   # Re-use default SSLContext
   # Letting ssl-config create the context from scratch would require some additional reflection
