--- a/core/docker-compose.dev.yml
+++ b/core/docker-compose.dev.yml
@@ -4,4 +4,4 @@ services:
   postgres:
     command: postgres -c "log_statement=all" -c "log_min_duration_statement=0" -c "log_duration=on" -c "track_functions=all"
     ports:
-      - "127.0.0.1:${POSTGRES_PORT_CORE-5432}:5432"
+      - "127.0.0.1:${POSTGRES_PORT-5432}:5432"
