--- a/core/src/main/resources/application.conf
+++ b/core/src/main/resources/application.conf
@@ -4,12 +4,6 @@ wust.core {
         port = 8080
         port = ${?WUST_CORE_PORT}
         clientBufferSize = 1000
-        //TODO: no hardcode
-        allowedOrigins = [
-            "http://localhost:12345",
-            "https://staging.woost.space",
-            "https://app.woost.space"
-        ]
     }
 
     pushNotification {
@@ -25,10 +19,12 @@ wust.core {
     }
 
     aws {
-        accessKey = ${?WUST_AWS_ACCESS_KEY}
-        secretKey = ${?WUST_AWS_SECRET_KEY}
         uploadBucketName = ${?WUST_AWS_UPLOAD_BUCKET}
         region = ${?WUST_AWS_REGION}
+        ses {
+            fromAddress = ${?WUST_AWS_SES_EMAIL_ADDRESS}
+            region = ${?WUST_AWS_SES_REGION}
+        }
     }
 
     auth {
@@ -48,7 +44,7 @@ wust.core {
     db {
         host = ${POSTGRES_HOSTNAME}
         port = 5432
-        port = ${?POSTGRES_PORT_CORE}
+        port = ${?POSTGRES_PORT}
         database = ${POSTGRES_DB}
         user = ${POSTGRES_USER}
         password = ${POSTGRES_PASSWORD}
