support blocking certain recipient email domains

--- a/core/src/main/resources/application.conf
+++ b/core/src/main/resources/application.conf
@@ -18,22 +18,28 @@ wust.core {
         url = ${?WUST_LOGSTASH_URL}
     }
 
-    aws {
-        uploadBucketName = ${?WUST_AWS_UPLOAD_BUCKET}
-        region = ${?WUST_AWS_REGION}
-        ses {
-            fromAddress = ${?WUST_AWS_SES_EMAIL_ADDRESS}
-            region = ${?WUST_AWS_SES_REGION}
-        }
-    }
-
     auth {
         tokenLifetime = 365 d
         secret = ${WUST_AUTH_SECRET}
     }
 
+    aws {
+        uploadBucketName = ${?WUST_AWS_UPLOAD_BUCKET}
+        region = ${?WUST_AWS_REGION}
+        ses {
+            settings {
+                fromAddress = ${?WUST_AWS_SES_EMAIL_ADDRESS}
+                blockedEmailDomains = ${?WUST_BLOCKED_EMAIL_DOMAINS}
+            }
+            region = ${?WUST_AWS_SES_REGION}
+        }
+    }
+
     email {
-        fromAddress = ${?WUST_EMAIL_ADDRESS}
+        settings {
+            fromAddress = ${?WUST_EMAIL_ADDRESS}
+            blockedEmailDomains = ${?WUST_BLOCKED_EMAIL_DOMAINS}
+        }
         smtp {
             username = ${?WUST_SMTP_USER}
             password = ${?WUST_SMTP_PASS}
