--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,6 +113,7 @@ workflows:
             branches:
               only:
                 - circleci
+                - aws
       - hold:
           type: approval
           requires:
