--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ defaults: &defaults
   environment:
     TERM: xterm-256color
   docker:
-    - image: fdietze/docker-alpine-scala-webdev:374f36e6e5b70cc47eec6c409295b6518b3d8d2d
+    - image: fdietze/docker-alpine-scala-webdev:latest
 
 restore_cache: &restore_cache
   restore_cache:
