--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,8 +1,8 @@
 version: 0.2
 
 phases:
-  install:
-    runtime-versions:
+  # install:
+    # runtime-versions:
       # java: openjdk11
       # docker: 2.2
   pre_build:
