--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,8 +15,8 @@ phases:
       - echo Build started on `date`
       - ci/build-unit-test
       - ci/build-docker
-      # - ci/test-postgres
-      # - ci/test-integration
+      - ci/test-postgres
+      - ci/test-integration
       - ci/publish-docker
   post_build:
     commands:
