support sending push notifications via pushed.co

--- a/core/src/main/resources/application.conf
+++ b/core/src/main/resources/application.conf
@@ -7,12 +7,22 @@ wust.core {
     }
 
     pushNotification {
-        subject = ${?WUST_PUSH_SUBJECT}
-        keys = {
-            publicKey = ${?WUST_PUSH_PUBLIC_KEY}
-            privateKey = ${?WUST_PUSH_PRIVATE_KEY}
+        webPush = {
+            subject = ${?WUST_PUSH_SUBJECT}
+            keys = {
+                publicKey = ${?WUST_PUSH_PUBLIC_KEY}
+                privateKey = ${?WUST_PUSH_PRIVATE_KEY}
+            }
+        }
+
+        pushed {
+            keys = {
+                appKey = ${?WUST_PUSHED_APP_KEY}
+                appSecret = ${?WUST_PUSHED_APP_SECRET}
+            }
         }
     }
+
 
     logstash {
         url = ${?WUST_LOGSTASH_URL}
