rename wust push variables

--- a/core/docker-compose.yml
+++ b/core/docker-compose.yml
@@ -45,9 +45,9 @@ services:
       WUST_SMTP_ENDPOINT: ${WUST_SMTP_ENDPOINT}
       WUST_SMTP_USER: ${WUST_SMTP_USER}
       WUST_SMTP_PASS: ${WUST_SMTP_PASS}
-      WUST_PUSH_SUBJECT: ${WUST_PUSH_SUBJECT}
-      WUST_PUSH_PUBLIC_KEY: ${WUST_PUSH_PUBLIC_KEY}
-      WUST_PUSH_PRIVATE_KEY: ${WUST_PUSH_PRIVATE_KEY}
+      WUST_WEB_PUSH_SUBJECT: ${WUST_WEB_PUSH_SUBJECT}
+      WUST_WEB_PUSH_PUBLIC_KEY: ${WUST_WEB_PUSH_PUBLIC_KEY}
+      WUST_WEB_PUSH_PRIVATE_KEY: ${WUST_WEB_PUSH_PRIVATE_KEY}
       WUST_AWS_ACCESS_KEY: ${WUST_AWS_ACCESS_KEY}
       WUST_AWS_SECRET_KEY: ${WUST_AWS_SECRET_KEY}
       WUST_AWS_UPLOAD_BUCKET: ${WUST_AWS_UPLOAD_BUCKET}
