--- a/core/src/main/resources/application.conf
+++ b/core/src/main/resources/application.conf
@@ -8,10 +8,10 @@ wust.core {
 
     pushNotification {
         webPush = {
-            subject = ${?WUST_PUSH_SUBJECT}
+            subject = ${?WUST_WEB_PUSH_SUBJECT}
             keys = {
-                publicKey = ${?WUST_PUSH_PUBLIC_KEY}
-                privateKey = ${?WUST_PUSH_PRIVATE_KEY}
+                publicKey = ${?WUST_WEB_PUSH_PUBLIC_KEY}
+                privateKey = ${?WUST_WEB_PUSH_PRIVATE_KEY}
             }
         }
 
