--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ branches:
 script:
     - set -e
     - ci/build-unit-test
-    - ci/build-docker
+    - ci/build-artifacts
     - ci/test-postgres
     - ci/test-integration
     - set +e
